kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quack-server
  labels:
    app: quack-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quack-server
  template:
    metadata:
      labels:
        app: quack-server
    spec:
      containers:
        - name: quack
          image: linogaliana/test-quack-sspcloud:latest   # À remplacer
          imagePullPolicy: Always
          ports:
            - containerPort: 9494
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "4Gi"
              cpu: "1000m"
          readinessProbe:
            tcpSocket:
              port: 9494
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 9494
            initialDelaySeconds: 20
            periodSeconds: 30
