kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quack-server
spec:
  selector:
    app: quack-server
  ports:
    - port: 80
      targetPort: 9494
